<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favourites</string>

    <!-- DetailsNeighbourActivity -->
    <string name="avatar_picture">Avatar picture</string>
    <string name="address">Saint pierre du mont à 5km</string>
    <string name="tel">+33 6 86 57 90 14</string>
    <string name="fb">www.facebook.fr/</string>

    <string name="detail_about_me">A propos de moi</string>
    <string name="large_text">
        "Bonjour ! Je shouaiterais faire de la marche nordique. "
        "Pas initié(e), je recherche une ou plusieurs personnes "
        "susceptible de m'accompagner ! J'aime les jeux de "
        "cartes tels la belote et le tarot.."
    </string>

    <string name="add_favourite">a été ajouté(e) aux favoris</string>
    <string name="already_favourite">fait déjà partie des favoris</string>

    <string name="target_to_be_replaced">150?</string>
    <string name="target_replacement">400?</string>

</resources>
