<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.neighbour_detail.DetailsNeighbourActivity"
    tools:showIn="@layout/activity_details_neighbour">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/activity_details_content_cv_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gutter"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            card_view:cardCornerRadius="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/activity_details_content_cv_about_me">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/activity_details_content_tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginStart="@dimen/text_margin"
                    android:textAppearance="@style/styleTitleCardView"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"/>

                <View
                    android:id="@+id/details_separator_view_one"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:background="?android:colorBackground"
                    card_view:layout_constraintTop_toBottomOf="@+id/activity_details_content_tv_name"
                    card_view:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/activity_details_content_tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:gravity="bottom"
                    android:drawableStart="@drawable/ic_location_on_24"
                    android:drawablePadding="@dimen/text_margin"
                    android:text="@string/address"
                    card_view:layout_constraintTop_toBottomOf="@+id/details_separator_view_one"
                    card_view:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/activity_details_content_tv_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:gravity="bottom"
                    android:drawableStart="@drawable/ic_call_24"
                    android:drawablePadding="@dimen/text_margin"
                    android:text="@string/tel"
                    card_view:layout_constraintTop_toBottomOf="@+id/activity_details_content_tv_address"
                    card_view:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/activity_details_content_tv_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:gravity="bottom"
                    android:drawableStart="@drawable/ic_network_24"
                    android:drawablePadding="@dimen/text_margin"
                    android:text="@string/fb"
                    card_view:layout_constraintTop_toBottomOf="@+id/activity_details_content_tv_tel"
                    card_view:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/activity_details_content_cv_about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gutter"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            card_view:cardCornerRadius="4dp"
            app:layout_constraintTop_toBottomOf="@+id/activity_details_content_cv_contact"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/activity_details_content_tv_about_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:text="@string/detail_about_me"
                    android:textAppearance="@style/styleTitleCardView"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"/>

                <View
                    android:id="@+id/details_separator_view_tow"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:background="?android:colorBackground"
                    card_view:layout_constraintTop_toBottomOf="@id/activity_details_content_tv_about_me"
                    card_view:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/activity_details_content_tv_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/large_text"
                    card_view:layout_constraintTop_toBottomOf="@id/details_separator_view_tow"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintBottom_toBottomOf="parent"/>

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>